updated package R files

--- a/BAUcalib/NAMESPACE
+++ b/BAUcalib/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(BAUcalib, .registration=TRUE)
+useDynLib(IAMUQ, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 importFrom(stats, rnorm)
 importFrom(stats, dnorm)
@@ -9,6 +9,8 @@ importFrom(stats, qlnorm)
 importFrom(stats, runif)
 importFrom(stats, dunif)
 importFrom(stats, qunif)
-importFrom(mvtnorm, dmvnorm)
-importFrom(mvtnorm, rmvnorm)
+importFrom(parallel, detectCores)
+importFrom(adaptMCMC, MCMC)
+importFrom(adaptMCMC, MCMC.parallel)
+importFrom(DEoptim, DEoptim)
 exportPattern("^[[:alpha:]]+")
