--- a/BAUcalib/DESCRIPTION
+++ b/BAUcalib/DESCRIPTION
@@ -1,16 +1,20 @@
-Package: BAUcalib
+Package: IAMUQ
 Type: Package
-Title: What the Package Does Using Title Case
+Title: Uncertainty Quantification For a Simple Integrated Assessment Model
 Version: 1.0
-Date: 2019-04-04
-Author: Your Name
-Maintainer: Your Name <your@email.com>
+Date: 2019-05-23
+Author: Vivek Srikrishnan
+Maintainer: Vivek Srikrishnan <vxs914@psu.edu>
 Description: More details about what the package does. See
         <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file>
         for details on how to write this part.
 License: GPL (>= 2)
 Depends: R (>= 2.10.0)
 Imports: Rcpp (>= 1.0.0),
-	 mvtnorm
+	 mvtnorm,
+	 adaptMCMC,
+	 DEoptim,
+	 parallel
 LinkingTo: Rcpp, RcppArmadillo
 LazyData: true
+RoxygenNote: 6.1.1
