allow flexible log-normal priors

--- a/IAMUQ/NAMESPACE
+++ b/IAMUQ/NAMESPACE
@@ -10,8 +10,10 @@ importFrom(magic,adiag)
 importFrom(mvtnorm,dmvnorm)
 importFrom(mvtnorm,rmvnorm)
 importFrom(parallel,detectCores)
+importFrom(stats,dlnorm)
 importFrom(stats,dnorm)
+importFrom(stats,qlnorm)
 importFrom(stats,qnorm)
+importFrom(stats,rlnorm)
 importFrom(stats,rnorm)
-useDynLib(IAMUQ, .registration=TRUE)
-exportPattern("^[[:alpha:]]+") 
+useDynLib(IAMUQ)
