--- a/IAMUQ/NAMESPACE
+++ b/IAMUQ/NAMESPACE
@@ -27,4 +27,7 @@ importFrom(stats,qlnorm)
 importFrom(stats,qnorm)
 importFrom(stats,rlnorm)
 importFrom(stats,rnorm)
+importFrom(truncnorm,dtruncnorm)
+importFrom(truncnorm,qtruncnorm)
+importFrom(truncnorm,rtruncnorm)
 useDynLib(IAMUQ, .registration = TRUE)
